--- a/Fabric.Platform.Logging/Fabric.Platform.Logging.csproj
+++ b/Fabric.Platform.Logging/Fabric.Platform.Logging.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
-    <Version>1.0.0-beta8</Version>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
