--- a/Fabric.Platform.Bootstrappers.Nancy/Fabric.Platform.Bootstrappers.Nancy.csproj
+++ b/Fabric.Platform.Bootstrappers.Nancy/Fabric.Platform.Bootstrappers.Nancy.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fabric.Platform.Auth" Version="1.0.0-beta6" />
-    <PackageReference Include="Fabric.Platform.Http" Version="1.0.0-beta4" />
-    <PackageReference Include="Fabric.Platform.Logging" Version="1.0.0-beta8" />
+    <PackageReference Include="Fabric.Platform.Auth" Version="1.0.2018040605" />
+    <PackageReference Include="Fabric.Platform.Http" Version="1.0.2018040605" />
+    <PackageReference Include="Fabric.Platform.Logging" Version="1.0.2018040605" />
     <PackageReference Include="Nancy" Version="2.0.0-clinteastwood" />
   </ItemGroup>
 
